add table code view html

--- a/table-code.html
+++ b/table-code.html
@@ -1,4 +1,25 @@
-﻿<table>
+﻿<!doctype>
+<head>
+	<meta charset="utf-8">
+	<title> Codigos ISO </title>
+	<style>
+		table {
+			border-collapse: collapse;
+			color: #444;
+			font: 1em Calibri;
+			margin: 1em auto;
+			text-align: left;
+		}
+		td, th {
+			padding: 0.5em 1em
+		}
+		tr:nth-child(even){
+			background: #EEE
+		}
+	</style>
+</head>
+<body>
+<table>
 <tr><th>Char</th>    <th>Hex</th>    <th>CssCode</th>    <th>NCR</th>    <th>Description</th></tr>
 <tr><td> </td>    <td>U+0020</td>    <td>\0020</td>    <td>&#38;&#35;32&#59;</td>    <td>SPACE</td></tr>
 <tr><td>!</td>    <td>U+0021</td>    <td>\0021</td>    <td>&#38;&#35;33&#59;</td>    <td>EXCLAMATION MARK</td></tr>
@@ -11304,3 +11325,4 @@
 <tr><td>￾</td>    <td>U+FFFE</td>    <td>\FFFE</td>    <td>&#38;&#35;65534&#59;</td>    <td>(unknown)</td></tr>
 <tr><td>￿</td>    <td>U+FFFF</td>    <td>\FFFF</td>    <td>&#38;&#35;65535&#59;</td>    <td>(unknown)</td></tr>
 </table>
+</body>
